--- a/casino/slot.html
+++ b/casino/slot.html
@@ -18,9 +18,9 @@
 <img src="he6.png">
 <br>
 
-<p>Saldo: 50$</p> <p>Panos: 1 2 tai 3$</p>
+<p>Saldo: </p> <p>Panos: </p>
 <input type="button" class="button" value="Pelaa" onclick="pelaa();"> 
-<input type="button" class="button" value="Panos">
+<input type="button" class="button" value="Panos" onclick="asetaPanos();">
 
 
 
