button class vaihto

--- a/casino/slot.html
+++ b/casino/slot.html
@@ -19,7 +19,7 @@
 <br>
 
 <p>Saldo: </p> <p>Panos: </p>
-<input type="button" class="button" value="Pelaa" onclick="pelaa();"> 
+<input type="button" class="button2" value="Pelaa" onclick="pelaa();"> 
 <input type="button" class="button" value="Panos" onclick="asetaPanos();">
 
 
