--- a/casino/slot.html
+++ b/casino/slot.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Hedelmä peli</h1>
 
-<script src="slot.js"></script>
+
 <img src="he1.png">
 <img src="he3.png">
 <img src="he2.png">
@@ -18,14 +18,15 @@
 <img src="he6.png">
 <br>
 
-<p>Saldo: </p> <p>Panos: </p>
+<p>Saldo: $<span id="rahat"></span></p>
+<p>Panos: $<span id="panos"></span></p>
 <input type="button" class="button2" value="Pelaa" onclick="pelaa();"> 
 <input type="button" class="button" value="Panos" onclick="asetaPanos();">
 
 
 
 
-
+<script src="slot.js"></script>
 </body>
 </html>
 
