--- a/casino/slot.html
+++ b/casino/slot.html
@@ -18,8 +18,8 @@
 <img src="he6.png">
 <br>
 
-<p>Saldo: $<span id="rahat"></span></p>
-<p>Panos: $<span id="panos"></span></p>
+<h2>Saldo: $<span id="rahat"></span></h2>
+<h2>Panos: $<span id="panos"></span></h2>
 <input type="button" class="button2" value="Pelaa" onclick="pelaa();"> 
 <input type="button" class="button" value="Panos" onclick="asetaPanos();">
 
