--- a/casino/slot.html
+++ b/casino/slot.html
@@ -22,7 +22,9 @@
 <h2>Panos: <span id="panos"></span> €</h2>
 <input type="button" class="button2" value="Pelaa" onclick="pelaa();"> 
 <input type="button" class="button" value="Panos" onclick="asetaPanos();">
-
+<br>
+<h2>Voitot:</h2> 
+<p>- 2 seiska symbolia antaa 4x voiton</p>
 
 
 
