--- a/casino/slot.html
+++ b/casino/slot.html
@@ -25,6 +25,7 @@
 <br>
 <h2>Voitot:</h2> 
 <p>- 3 seiska symbolia antaa 10x voiton</p>
+<p>- 3 kirsikka symbolia antaa 4x voiton</p>
 <p>- 2 sitruuna symbolia antaa 3x voiton</p>
 
 
