--- a/casino/slot.html
+++ b/casino/slot.html
@@ -24,9 +24,10 @@
 <input type="button" class="button" value="Panos" onclick="asetaPanos();">
 <br>
 <h2>Voitot:</h2> 
-<p>- 3 seiska symbolia antaa 10x voiton</p>
+<p>- 3 seiska symbolia antaa 5x voiton</p>
 <p>- 3 kirsikka symbolia antaa 4x voiton</p>
 <p>- 2 sitruuna symbolia antaa 3x voiton</p>
+<p>- 2 luumu symbolia antaa 3x voiton</p>
 
 
 
