--- a/casino/slot.html
+++ b/casino/slot.html
@@ -28,6 +28,7 @@
 <p>- 3 kirsikka symbolia antaa 4x voiton</p>
 <p>- 2 sitruuna symbolia antaa 3x voiton</p>
 <p>- 2 luumu symbolia antaa 2x voiton</p>
+<p>- 2 appelsiini symbolia antaa 2x voiton</p>
 
 
 
