--- a/viestiseinä/viestiseinä.html
+++ b/viestiseinä/viestiseinä.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="seinä.css">
-    <title>Viestiseinä</title>
+<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">   
+<title>Viestiseinä</title>
 </head>
 <body>
-<h2>Viestiseinä</h2>
+<div class="a">
+<h1>Viestiseinä</h1>
 <h2>Lisää viesti</h2>
 <h2></h2> 
 <input type="text" name="firstname" placeholder= "Anna nimesi"><br>
@@ -17,6 +19,6 @@
 <textarea name="viesti" id="" cols="30" rows="10" placeholder= "Kirjoita viesti"></textarea>
 <br>
 <input type="button" Value= "Lähetä viesti" class="button1" onclick=>  
-
+</div>
 </body>
 </html>
