--- a/viestiseinä/viestiseinä.html
+++ b/viestiseinä/viestiseinä.html
@@ -7,18 +7,21 @@
 <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="seinä.css">
 <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">   
-<title>Viestiseinä</title>
+<title>Lisää viesti</title>
 </head>
 <body>
 <div class="a">
 <h1>Viestiseinä</h1>
-<h2>Lisää viesti</h2>
+<h2>Kirjoita viesti</h2>
 <h2></h2> 
-<input type="text" name="firstname" placeholder= "Anna nimesi"><br>
+<input type="text" name="firstname" placeholder= "Anna nimimerkkisi"><br>
 <h2></h2>
-<textarea name="viesti" id="" cols="30" rows="10" placeholder= "Kirjoita viesti"></textarea>
+<textarea name="viesti" id="" cols="90" rows="12" placeholder= "Kirjoita viesti"></textarea>
 <br>
 <input type="button" Value= "Lähetä viesti" class="button1" onclick=>  
+<br>
+<br>
+<h2>[Viestissä voi mennä hetki ennen kun se näkyy julkisesti koska viestejä moderoidaan!]</h2>
 </div>
 </body>
 </html>
