--- a/viestiseinä/viestiseinä.html
+++ b/viestiseinä/viestiseinä.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="seinä.css">
 <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">   
@@ -11,14 +12,17 @@
 </head>
 <body>
 <div class="a">
-<h1>Viestiseinä</h1>
-<h2>Kirjoita viesti</h2>
-<h2></h2> 
-<input type="text" name="firstname" placeholder= "Anna nimimerkkisi"><br>
+<i><h1>Kirjoita viesti viestiseinälle</h1></i>
+<p></p>
+<br>
+<br>
+<input type="text" name="firstname" placeholder= "Nimimerkki:"><br>
 <h2></h2>
-<textarea name="viesti" id="" cols="90" rows="12" placeholder= "Kirjoita viesti"></textarea>
+<br>
+<textarea name="viesti" id="" cols="70" rows="5" placeholder= "Kirjoita viesti"></textarea>
 <br>
 <input type="button" Value= "Lähetä viesti" class="button1" onclick=>  
+<br>
 <br>
 <br>
 <h2>[Viestissä voi mennä hetki ennen kun se näkyy julkisesti koska viestejä moderoidaan!]</h2>
