--- a/näytäviestit/näytäviestit.html
+++ b/näytäviestit/näytäviestit.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">  
     <link rel="stylesheet" type="text/css" href="näytäviestit.css">
-    <title>viestit</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">  
+    <title>Uusimmat viestit</title>
     <div class="b">
-    <h1>Uusimmat viestit</h1>
+    <i><h1>Uusimmat viestit</h1></i>
 </head>
 <body>
 
