--- a/viestiseinä/viestiseinä.html
+++ b/viestiseinä/viestiseinä.html
@@ -5,27 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
+
 <link rel="stylesheet" type="text/css" href="seinä.css">
 <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">   
 <title>Lisää viesti</title>
 </head>
 <body>
+
 <div class="a">
 <i><h1>Kirjoita viesti viestiseinälle</h1></i>
 <p></p>
 <br>
 <br>
-<input type="text" name="firstname" placeholder= "Nimimerkki:"><br>
+<form action="http://localhost/markusp/n%C3%A4yt%C3%A4viestit.html" method="post">
+    <div class="form-group">
+        <label>Nimi:</label>
+        <input type="text" name="name" class="form-control" value="">
 <h2></h2>
 <br>
-<textarea name="viesti" id="" cols="70" rows="5" placeholder= "Kirjoita viesti"></textarea>
+<textarea name="viesti" id="" cols="65" rows="5" placeholder= "Kirjoita viesti:"></textarea>
 <br>
-<input type="button" Value= "Lähetä viesti" class="button1" onclick=>  
+
+    <input type="submit" value="Lähetä viesti" />
+    </form>
 <br>
 <br>
 <br>
-<h3>[Viestissä voi mennä hetki ennen kun se näkyy julkisesti koska viestejä moderoidaan!]</h3>
+<h3>Viestissä voi mennä hetki ennen kun se näkyy julkisesti koska viestejä moderoidaan!</h3>
 </div>
 </body>
 </html>
