--- a/näytäviestit/näytäviestit.html
+++ b/näytäviestit/näytäviestit.html
@@ -8,10 +8,43 @@
     <link rel="stylesheet" type="text/css" href="näytäviestit.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">  
     <title>Uusimmat viestit</title>
+
     <div class="b">
+
     <i><h1>Uusimmat viestit</h1></i>
 </head>
 <body>
+<div class="card" style="width: 18rem;">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Nimi</li>
+                <li class="list-group-item">Palaute</li>
+                <li class="list-group-item">Pvm</li>
+                </ul>
+              </div>
+              <br>
+              <div class="card" style="width: 18rem;">
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">Nimi</li>
+                      <li class="list-group-item">Palaute</li>
+                      <li class="list-group-item">Pvm</li>
+                    </ul>
+                  </div>
+                  <br>
+                  <div class="card" style="width: 18rem;">
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">Nimi</li>
+                          <li class="list-group-item">Palaute</li>
+                          <li class="list-group-item">Pvm</li>
+                        </ul>
+                      </div>
+                      <br>
+                      <div class="card" style="width: 18rem;">
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">Nimi</li>
+                              <li class="list-group-item">Palaute</li>
+                              <li class="list-group-item">Pvm</li>
+                            </ul>
+                          </div>
 
 
 </div>   
