--- a/näytäviestit/näytäviestit.html
+++ b/näytäviestit/näytäviestit.html
@@ -14,37 +14,21 @@
     <i><h1>Uusimmat viestit</h1></i>
 </head>
 <body>
-<div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Nimi</li>
-                <li class="list-group-item">Palaute</li>
-                <li class="list-group-item">Pvm</li>
-                </ul>
-              </div>
-              <br>
-              <div class="card" style="width: 18rem;">
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Nimi</li>
-                      <li class="list-group-item">Palaute</li>
-                      <li class="list-group-item">Pvm</li>
-                    </ul>
+    <br>
+    <br>
+        <div class="container">
+                <div class="row">
+                  <div class="col-sm">
+                    Nimi
                   </div>
-                  <br>
-                  <div class="card" style="width: 18rem;">
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">Nimi</li>
-                          <li class="list-group-item">Palaute</li>
-                          <li class="list-group-item">Pvm</li>
-                        </ul>
-                      </div>
-                      <br>
-                      <div class="card" style="width: 18rem;">
-                            <ul class="list-group list-group-flush">
-                              <li class="list-group-item">Nimi</li>
-                              <li class="list-group-item">Palaute</li>
-                              <li class="list-group-item">Pvm</li>
-                            </ul>
-                          </div>
+                  <div class="col-sm">
+                    Palaute
+                  </div>
+                  <div class="col-sm">
+                    Päivämäärä
+                  </div>
+                </div>
+              </div>
 
 
 </div>   
