--- a/näytäviestit/näytäviestit.html
+++ b/näytäviestit/näytäviestit.html
@@ -19,13 +19,13 @@
         <div class="container">
                 <div class="row">
                   <div class="col-sm">
-                    Nimi
+                    Nimi:
                   </div>
                   <div class="col-sm">
-                    Palaute
+                    Palaute:
                   </div>
                   <div class="col-sm">
-                    Päivämäärä
+                    Päivämäärä:
                   </div>
                 </div>
               </div>
