--- a/ylläpitonäkymä/ylläpitonäkymä.html
+++ b/ylläpitonäkymä/ylläpitonäkymä.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">  
+<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">   
 <link rel="stylesheet" type="text/css" href="ylläpitonäkymä.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <title>Ylläpitonäkymä</title>
 <div class="b">
 <h1>Ylläpitonäkymä</h1>
