--- a/ylläpitonäkymä/ylläpitonäkymä.html
+++ b/ylläpitonäkymä/ylläpitonäkymä.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <title>Ylläpitonäkymä</title>
 <div class="b">
-<h1>Ylläpitonäkymä</h1>
+<i><h1>Ylläpitonäkymä</h1></i>
 </head>
 <body>
 </div>    
