--- a/näytäviestit/näytäviestit.html
+++ b/näytäviestit/näytäviestit.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" type="text/css" href="näytäviestit.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">  
     <title>Uusimmat viestit</title>
-
+<style>
+body {background-color: black;}
+h1 {
+  color: white;
+}
+</style>
     <div class="b">
+<body>
 <br>
     <i><h1>Uusimmat viestit</h1></i>
 </head>
-<body>
+
     <br>
     <br>
     <br>
